# DYOD_WS1819

./: .dockerignore  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  Docker-Makefile  Dockerfile  README.md  cpplint.py  install.sh  run-container.sh
scripts/: format.sh
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  all_type_variant.hpp  resolve_type.hpp  type_cast.hpp  types.hpp
src/lib/operators/: abstract_operator.cpp  abstract_operator.hpp  get_table.cpp  get_table.hpp  print.cpp  print.hpp  table_scan.cpp  table_scan.hpp  table_wrapper.cpp  table_wrapper.hpp
src/lib/storage/: base_attribute_vector.hpp  base_segment.hpp  chunk.cpp  chunk.hpp  dictionary_segment.hpp  fitted_attribute_vector.cpp  fitted_attribute_vector.hpp  reference_segment.cpp  reference_segment.hpp  storage_manager.cpp  storage_manager.hpp  table.cpp  table.hpp  value_segment.cpp  value_segment.hpp
src/lib/utils/: load_table.cpp  load_table.hpp  performance_warning.hpp
src/test/: CMakeLists.txt  base_test.cpp  base_test.hpp
src/test/operators/: get_table_test.cpp  print_test.cpp  table_scan_test.cpp
src/test/storage/: chunk_test.cpp  dictionary_segment_test.cpp  fitted_attribute_vector_test.cpp  reference_segment_test.cpp  storage_manager_test.cpp  table_test.cpp  value_segment_test.cpp
